# COSC422Assignment1

./: CMakeLists.txt  README.md  TerrainPatches.cont  TerrainPatches.cont.glsl  TerrainPatches.cpp  TerrainPatches.eval  TerrainPatches.eval.glsl  TerrainPatches.frag  TerrainPatches.geom  TerrainPatches.vert
Textures/: brick.tga  grass.tga  grass2.tga  snow.tga  water.tga
